@@ -8,6 +8,7 @@ Changes for 1.5:
 
 Changes for 1.4.1:
 
+ - fixed NOTSUPPORTED status for 'net.if.*' of Solaris, thanks to 'juampe' (Eugene)
  - added check of memory leaks in zbx_malloc() (Alexei)
  - added "PerfCounter" configuration parameter (Eugene)
  - cleaned code to avoid '... may be used uninitialized in this function' warnings (Alexei)
